done first post

--- a/style.css
+++ b/style.css
@@ -1,5 +1,60 @@
+*{
+    margin: 0px;
+    padding: 0px;
+    box-sizing: content-box;
+    text-decoration: none;
+    font-family: 'Roboto';
+    background: none;
+}
+
 body{
-    width: 1440px;
-    height: 2356px;
     background: #0F172A;
 }
+
+header{
+    margin-top: 4px;
+}
+
+.header-bar{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px 100px;
+}
+
+.buttons{
+    display: flex;
+    gap: 121px;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 28px;
+}
+
+.buttons a{
+    color: #F8FAFC;
+}
+
+main{
+    background: none;
+    margin: 0px 145px auto 145px;
+}
+
+.element{
+    display: flex;
+    color: #CBD5E1;
+    background: rgba(30, 41, 59, 0.4);
+    border-radius: 20px;
+    gap: 44px;
+}
+
+.element img{
+    margin: 34px auto 34px 8px;
+}
+
+.text h2{
+    margin-top: 88px;
+    margin-bottom: 25px;
+}
+
+
