--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ main{
 .text h2{
     margin-top: 88px;
     margin-bottom: 25px;
-    font-weight: 500;
+    font-weight: 700;
     font-size: 30px;
     line-height: 35px;
 }
@@ -102,4 +102,82 @@ main{
 
 .element-3 img{
     margin: 54px auto 54px 27px;
+}
+
+
+/*            latest posts            */
+
+.latest-posts{
+    display: flex;
+    flex-direction: row;
+    max-width: 370px;
+    background: #1E293B;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+    border-radius: 20px;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 23px;
+    text-align: center;
+    color: #9CA3AF;
+    gap: 20px;
+    margin-bottom: 139px;
+} 
+
+.latest-posts div{
+    background: #1E293B;
+    border-radius: 20px;
+}
+
+.latest-posts p{
+    padding-bottom: 20px;
+}
+
+
+.headline-bottom{
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 28px;
+    text-align: center;
+
+}
+
+
+
+.timer{
+    color: #9CA3AF;
+
+}
+
+
+
+
+/*--------------------------------------------------------------footer---------------------------------------------------*/
+
+footer{
+    display: flex;
+    border-top: 1px solid #CBD5E1;
+    height: 130px;
+}
+
+footer p{
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 23px;
+    color: #CBD5E1;
+}
+
+footer nav{
+    display:flex;
+    align-items: center;
+}
+
+.footer-social{
+    display: flex;
+    gap: 10px;
 }
