--- a/style.css
+++ b/style.css
@@ -125,6 +125,10 @@ main{
     margin-bottom: 139px;
 } 
 
+.latest-posts a{
+    color:#CBD5E1 ;   
+}
+
 .latest-posts div{
     background: #1E293B;
     border-radius: 20px;
@@ -134,6 +138,9 @@ main{
     padding-bottom: 20px;
 }
 
+.latest-posts h3{
+    margin-bottom: 20px;
+}
 
 .headline-bottom{
     font-family: 'Roboto';
@@ -161,6 +168,7 @@ footer{
     display: flex;
     border-top: 1px solid #CBD5E1;
     height: 130px;
+    
 }
 
 footer p{
